--- a/content/docs/integrations/facebook-pixel.mdx
+++ b/content/docs/integrations/facebook-pixel.mdx
@@ -45,6 +45,20 @@ To verify your Pixel is working:
 2. Visit your online store.
 3. The extension shows which events are firing.
 
+## Using Facebook Pixel with Media Buying
+
+Facebook Pixel is essential for media buyers running Meta ad campaigns (Facebook & Instagram). With the pixel installed:
+
+- **Create Custom Audiences** based on store visitors, cart abandoners, or past purchasers
+- **Build Lookalike Audiences** to find new customers similar to your best buyers
+- **Optimize for Conversions** by letting Meta's algorithm target users most likely to purchase
+- **Track ROAS** (Return on Ad Spend) accurately across your campaigns
+- **Retarget visitors** who browsed products but didn't complete checkout
+
 <Callout title="Note">
 Facebook Pixel only works on your **online storefront**. It does not track actions in the tenant portal (admin dashboard). The Pixel is loaded per store — each store can have its own Pixel ID.
+</Callout>
+
+<Callout title="Tip">
+For best results, use Facebook Pixel alongside **TikTok Pixel** and **Google Tag Manager**. Each platform serves different audiences, and having all three installed gives you maximum reach and tracking coverage for your ad campaigns.
 </Callout>
