--- a/content/docs/catalogue/product-reviews.mdx
+++ b/content/docs/catalogue/product-reviews.mdx
@@ -22,14 +22,14 @@ Each review contains:
 2. They fill in their name, select a star rating, and write a comment.
 3. The review is submitted with a **Pending** status — it is **not** visible to other customers yet.
 4. You receive a push notification that a new review has been submitted.
-5. You review the submission in the Tenant Portal and either **approve** or keep it hidden.
+5. You review the submission in the Business Portal and either **approve** or keep it hidden.
 6. Once approved (status changed to **Displayed**), the review appears publicly on the product page.
 
 <Callout title="Moderation First">
 All reviews start as **Pending**. No review is shown to customers until you explicitly approve it. This gives you full control over what's displayed on your storefront.
 </Callout>
 
-## Managing Reviews in the Tenant Portal
+## Managing Reviews in the Business Portal
 
 ### Viewing Reviews
 
