--- a/content/docs/integrations/facebook-pixel.mdx
+++ b/content/docs/integrations/facebook-pixel.mdx
@@ -20,7 +20,7 @@ This data helps you:
    - Copy your **Pixel ID** (a number like `1234567890123456`)
 
 2. **Enter the Pixel ID in Cashvio:**
-   - Go to your store's settings in the tenant portal
+   - Go to your store's settings in the business portal
    - Navigate to the **Online Store** configuration
    - Find the **Facebook Pixel ID** field
    - Paste your Pixel ID
@@ -56,7 +56,7 @@ Facebook Pixel is essential for media buyers running Meta ad campaigns (Facebook
 - **Retarget visitors** who browsed products but didn't complete checkout
 
 <Callout title="Note">
-Facebook Pixel only works on your **online storefront**. It does not track actions in the tenant portal (admin dashboard). The Pixel is loaded per store — each store can have its own Pixel ID.
+Facebook Pixel only works on your **online storefront**. It does not track actions in the business portal (admin dashboard). The Pixel is loaded per store — each store can have its own Pixel ID.
 </Callout>
 
 <Callout title="Tip">
