--- a/content/docs/integrations/google-tags.mdx
+++ b/content/docs/integrations/google-tags.mdx
@@ -14,7 +14,7 @@ description: How to set up Google Tag Manager on your online store for analytics
    - Copy your **GTM Container ID** (looks like `GTM-XXXXXXX`)
 
 2. **Enter the GTM ID in Cashvio:**
-   - Go to your store's settings in the tenant portal
+   - Go to your store's settings in the business portal
    - Navigate to the **Online Store** configuration
    - Find the **Google Tag Manager ID** field
    - Paste your GTM Container ID
