--- a/content/docs/integrations/multi-currency-language.mdx
+++ b/content/docs/integrations/multi-currency-language.mdx
@@ -47,7 +47,7 @@ The formatting adapts to the customer's selected language.
 
 ## Multi-Language Support
 
-### Tenant Portal Languages
+### Business Portal Languages
 
 The Cashvio admin portal supports:
 
@@ -98,4 +98,4 @@ When Arabic is selected:
 - Navigation moves to the right side
 - Numbers and currency remain in their standard format
 
-Both the tenant portal and the storefront fully support RTL.
+Both the business portal and the storefront fully support RTL.
