--- a/content/docs/integrations/tiktok-pixel.mdx
+++ b/content/docs/integrations/tiktok-pixel.mdx
@@ -23,7 +23,7 @@ This data helps you:
    - Copy your **Pixel ID** (an alphanumeric code, typically starting with `C`)
 
 2. **Enter the Pixel ID in Cashvio:**
-   - Go to your store's settings in the tenant portal
+   - Go to your store's settings in the business portal
    - Navigate to the **Online Store** configuration
    - Find the **TikTok Pixel** tab
    - Paste your Pixel ID
@@ -59,7 +59,7 @@ TikTok Pixel is essential for media buyers running TikTok ad campaigns. With the
 - **Track ROAS** (Return on Ad Spend) accurately across your campaigns
 
 <Callout title="Note">
-TikTok Pixel only works on your **online storefront**. It does not track actions in the tenant portal (admin dashboard). The Pixel is loaded per store — each store can have its own TikTok Pixel ID.
+TikTok Pixel only works on your **online storefront**. It does not track actions in the business portal (admin dashboard). The Pixel is loaded per store — each store can have its own TikTok Pixel ID.
 </Callout>
 
 <Callout title="Tip">
