--- a/content/docs/online-store/checkout-flow.mdx
+++ b/content/docs/online-store/checkout-flow.mdx
@@ -44,8 +44,8 @@ The customer selects how they want to pay:
 
 | Method | How It Works |
 |--------|-------------|
-| **Cash** | Pay on delivery or pickup. A pending payment record is created — you mark it as received from the tenant portal. |
-| **Receipt** | The customer uploads a photo of their payment receipt (bank transfer, InstaPay, etc.) as proof of payment. A pending payment is created with the receipt attached. You review and accept it from the tenant portal. |
+| **Cash** | Pay on delivery or pickup. A pending payment record is created — you mark it as received from the business portal. |
+| **Receipt** | The customer uploads a photo of their payment receipt (bank transfer, InstaPay, etc.) as proof of payment. A pending payment is created with the receipt attached. You review and accept it from the business portal. |
 
 Only the storefront payment methods you have enabled for the store are shown.
 
@@ -57,7 +57,7 @@ When the customer selects **Receipt**:
 2. The customer clicks to select a receipt image (JPEG, PNG, or WebP).
 3. The image uploads automatically.
 4. A success confirmation appears once the upload is complete.
-5. The receipt is attached to the order payment and visible to you in the tenant portal.
+5. The receipt is attached to the order payment and visible to you in the business portal.
 
 <Callout title="Important">
 If your store has **no active storefront payment methods**, the checkout page displays a warning message: "Payments are currently unavailable. This store is not accepting payments at the moment." The customer cannot place the order until payment methods are configured. Make sure you have at least one storefront payment method enabled.
@@ -93,7 +93,7 @@ The customer clicks **Place Order**. The order is created in your Cashvio portal
 ## After the Order is Placed
 
 - The customer sees an **Order Success** page with their order number and a countdown redirect back to the store.
-- The order appears in your **Sales** list in the tenant portal with the order source marked as **Storefront**.
+- The order appears in your **Sales** list in the business portal with the order source marked as **Storefront**.
 - Payment records are created based on the payment method:
   - **Cash** — A **pending** payment record. Mark it as completed when the customer pays.
   - **Receipt** — A **pending** payment record with the uploaded receipt image. Review the receipt and accept it from the order details.
