--- a/content/docs/online-store/storefront-overview.mdx
+++ b/content/docs/online-store/storefront-overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Online Storefront Overview
-description: How your online store works, what customers see, and how to configure it from the tenant portal.
+description: How your online store works, what customers see, and how to configure it from the business portal.
 ---
 
 ## What is the Online Store?
@@ -64,7 +64,7 @@ The storefront supports **light and dark mode only**. Custom themes, colors, fon
 
 ## Configuring Your Online Store
 
-From the **tenant portal**, go to your store's settings and navigate to **Online Store** (or **المتجر الإلكتروني**).
+From the **business portal**, go to your store's settings and navigate to **Online Store** (or **المتجر الإلكتروني**).
 
 ### Store Subdomain Configuration
 
@@ -105,7 +105,7 @@ Cashvio supports **subdomain-based storefronts only**. Custom domains are not cu
 
 ## What Affects Your Online Store
 
-Your storefront is connected to the tenant portal. Changes you make in the portal are reflected on the storefront:
+Your storefront is connected to the business portal. Changes you make in the portal are reflected on the storefront:
 
 | Portal Setting | Storefront Effect |
 |----------------|-------------------|
