--- a/content/docs/orders/managing-orders.mdx
+++ b/content/docs/orders/managing-orders.mdx
@@ -13,7 +13,7 @@ description: How to view, filter, update, and manage your sales orders including
 | **Order Number** | Unique identifier for each order |
 | **Customer** | The customer who placed the order |
 | **Store** | Which store the order belongs to |
-| **Order Source** | Where the order was created — **Web** (tenant portal) or **Storefront** (online store) |
+| **Order Source** | Where the order was created — **Web** (business portal) or **Storefront** (online store) |
 | **Payment Method** | The primary payment method used (Cash, Online, Receipt, or Store Credit) |
 | **Fulfillment Method** | How the order will be fulfilled (In-Store, Pickup, Delivery, or Dine-In) |
 | **Fulfillment Status** | Current fulfillment status (Pending, Preparing, Ready, Delivering, Completed, Cancelled) |
@@ -52,7 +52,7 @@ Click on any order to open its **Order Details** page. Here you will find:
 ### Order Information
 - Order number, date, and time
 - Customer name and contact
-- **Order source** — Whether the order was created from the tenant portal (Web) or the online storefront
+- **Order source** — Whether the order was created from the business portal (Web) or the online storefront
 - Fulfillment method and delivery address (if applicable)
 - Order notes
 
