--- a/content/docs/settings/business-settings.mdx
+++ b/content/docs/settings/business-settings.mdx
@@ -5,7 +5,7 @@ description: How to configure your business information, tax details, and subscr
 
 ## Business Information
 
-As the account owner (tenant), you can configure your business details:
+As the account owner (business owner), you can configure your business details:
 
 1. Go to **Settings** in the sidebar.
 2. Navigate to **Business Settings**.
@@ -33,5 +33,5 @@ View your current subscription plan details:
    - **Upgrade Options** — Available plan upgrades
 
 <Callout title="Note">
-Business settings are only accessible to the account owner (tenant). Regular team members with roles cannot access this section.
+Business settings are only accessible to the account owner (business owner). Regular team members with roles cannot access this section.
 </Callout>
