--- a/content/docs/stores/delivery-zones.mdx
+++ b/content/docs/stores/delivery-zones.mdx
@@ -35,7 +35,7 @@ You can also reach delivery zones from **Settings > Store Details**, then click 
 
 ## How Delivery Zones Affect the Portal
 
-When [creating a delivery order](/docs/orders/creating-orders) in the tenant portal:
+When [creating a delivery order](/docs/orders/creating-orders) in the business portal:
 
 1. The delivery address is matched to a delivery zone.
 2. The corresponding **delivery fee** is automatically added to the order.
