--- a/content/docs/stores/fulfillment-methods.mdx
+++ b/content/docs/stores/fulfillment-methods.mdx
@@ -5,7 +5,7 @@ description: How to set up delivery, pickup, dine-in, and in-store fulfillment o
 
 ## What are Fulfillment Methods?
 
-Fulfillment methods define **how orders are delivered to customers**. When creating an order in the tenant portal or when a customer checks out on your online store, a fulfillment method is selected. Each store can enable different methods.
+Fulfillment methods define **how orders are delivered to customers**. When creating an order in the business portal or when a customer checks out on your online store, a fulfillment method is selected. Each store can enable different methods.
 
 ## Available Fulfillment Methods
 
