--- a/content/docs/stores/payment-methods.mdx
+++ b/content/docs/stores/payment-methods.mdx
@@ -7,7 +7,7 @@ description: How to configure which payment methods your store accepts for porta
 
 Payment methods define how customers can pay for their orders. Each store has two sets of payment methods:
 
-- **Portal Payment Methods** — Used when you or your team create orders in the tenant portal (like a POS system).
+- **Portal Payment Methods** — Used when you or your team create orders in the business portal (like a POS system).
 - **Storefront Payment Methods** — Used when customers place orders through your online store.
 
 ## Available Payment Methods
@@ -23,7 +23,7 @@ Cashvio uses a unified set of payment methods:
 
 ## Configuring Portal Payment Methods
 
-Portal payment methods control what options your team sees when creating orders in the tenant portal.
+Portal payment methods control what options your team sees when creating orders in the business portal.
 
 1. Navigate to **Store Details > Payment Methods** in the sidebar.
 2. If you have multiple stores, select the store first.
@@ -32,7 +32,7 @@ Portal payment methods control what options your team sees when creating orders 
 5. Changes save automatically after confirmation.
 
 <Callout title="Note">
-Only enabled portal payment methods appear as options when [creating orders](/docs/orders/creating-orders) in the tenant portal.
+Only enabled portal payment methods appear as options when [creating orders](/docs/orders/creating-orders) in the business portal.
 </Callout>
 
 ## Storefront Payment Methods
@@ -47,8 +47,8 @@ Online payments are not yet available. Cash and Receipt are the currently suppor
 
 | Method | Customer Experience |
 |--------|---------------------|
-| **Cash** | Customer selects "Cash" at checkout. A pending payment record is created. You mark it as paid from the tenant portal when the customer pays on delivery or pickup. |
-| **Receipt** | Customer selects "Upload Receipt" and uploads a photo of their payment transfer. A pending payment is created with the receipt attached. You review and accept the receipt from the tenant portal. |
+| **Cash** | Customer selects "Cash" at checkout. A pending payment record is created. You mark it as paid from the business portal when the customer pays on delivery or pickup. |
+| **Receipt** | Customer selects "Upload Receipt" and uploads a photo of their payment transfer. A pending payment is created with the receipt attached. You review and accept the receipt from the business portal. |
 
 ## Store Credit Payments
 
