--- a/content/docs/team/roles-permissions.mdx
+++ b/content/docs/team/roles-permissions.mdx
@@ -58,7 +58,7 @@ When a user logs in, their role determines:
 - **Which Dashboard quick actions appear** — Only actions the user is allowed to perform are shown.
 
 <Callout title="Important">
-The account owner (tenant) always has full access to everything, regardless of role settings. Roles only restrict invited team members.
+The account owner (business owner) always has full access to everything, regardless of role settings. Roles only restrict invited team members.
 </Callout>
 
 ## Default Roles vs Custom Roles
